<resources>
    <string name="app_name">NotesApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newTodo">New Task</string>
    <string name="todoTitle">Title</string>
    <string name="todoItem">Todo Item</string>
    <string name="addNote">Add Note</string>
    <string name="addTodo">Add Todo</string>
    <string name="deleting">Deleting…</string>
    <string name="todoDeleteMsg">Are you sure?</string>
    <string name="updateTime">Updated At</string>
    <string name="noteTitle">Note Title</string>
    <string name="dialogYes">Go ahead</string>
    <string name="dialogNo">Wait</string>

    <string-array name="Priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="priorityDefault">Medium</string>

    <string-array name="Category">
        <item>Homework</item>
        <item>Goal</item>
        <item>Chores</item>
    </string-array>
    <string name="prioritySpinnerHint">Priority</string>
    <string name="categorySpinnerHint">Category</string>
    <string name="Title">Title</string>
    <string name="notes">Enter notes here</string>
    <string name="txtBody">Your note is here</string>
    <string name="category">Category</string>
    <string name="addTask">Add Task</string>
    <string name="details">Details (Optional)</string>
    <string name="textview">TextView</string>
    <string name="mark_as_complete">Mark As Completed</string>
    <string name="close">Close</string>
    <string name="mark_as_incomplete">Mark As Incomplete</string>
    <string name="detail_priority">Priority: %s</string>
    <string name="todo_title_empty_error">Title cannot be empty</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="bad_url">Your url is not correct</string>
    <string name="password">Enter passcode</string>
</resources>